# cad2d3d

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCEPROMPT.MD
.github/workflows/: ci.yml
backend/: .coverage  nicegui_app.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: export.py  generate.py  models.py  mold.py  preprocess.py  settings.py  upload.py
backend/app/core/: config.py  exceptions.py
backend/app/engines/: __init__.py  base.py  registry.py
backend/app/engines/crm/: README_MODEL.md  __init__.py  adapter.py
backend/app/engines/hunyuan3d2/: __init__.py  adapter.py
backend/app/engines/instantmesh/: README_MODEL.md  __init__.py  adapter.py
backend/app/engines/photogrammetry/: __init__.py  adapter.py
backend/app/engines/secadnet/: README_MODEL.md  __init__.py  adapter.py
backend/app/engines/trellis/: __init__.py  adapter.py
backend/app/engines/triposr/: README_MODEL.md  __init__.py  adapter.py
backend/app/engines/wonder3d/: README_MODEL.md  __init__.py  adapter.py
backend/app/engines/zero123pp/: README_MODEL.md  __init__.py  adapter.py
backend/app/history/: __init__.py  manager.py
backend/app/models/: schemas.py
backend/app/mold/: __init__.py  core.py  draft_analysis.py  parting_line.py  parts_db.py  sizing.py  undercut.py
backend/app/postprocessing/: __init__.py  mesh_repair.py
backend/app/preprocessing/: __init__.py  annotation_remover.py  depth_estimator.py  format_converter.py  multiview_splitter.py  pipeline.py
backend/app/similarity/: __init__.py  image_similarity.py  mesh_similarity.py
backend/app/weights/: __init__.py  manager.py
backend/data/: parts_catalog.json
backend/static/: viewer3d.html
backend/tests/: __init__.py  conftest.py  test_api.py  test_api_integration.py  test_coverage_boost.py  test_depth_pipeline_weights.py  test_engines.py  test_engines_new.py  test_generate_preprocessing.py  test_history.py  test_modules.py  test_mold.py  test_preprocessing_extended.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
