[project]
name = "cad3d-generator"
version = "0.1.0"
description = "2D Image/CAD to 3D CAD Model Generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "aiofiles>=23.0",
    "pillow>=10.0",
    "trimesh>=4.0",
    "numpy>=1.24",
    "httpx>=0.27.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
